force-app/main/default/objects/Task_Grid_Setting__mdt/Task_Grid_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This allows you to change the logic later</description>
    <label>Task Grid Setting</label>
    <pluralLabel>Task Grid Settings</pluralLabel>
</CustomObject>