force-app/main/default/objects/Task_Grid_Setting__mdt/fields/Daily_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Daily_Threshold__c</fullName>
    <description>Set to 8.0. The hour limit for splitting.</description>
    <label>Daily Threshold</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>