force-app/main/default/objects/Task_Grid_Setting__mdt/fields/Overflow_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Suffix__c</fullName>
    <label>Overflow Suffix</label>
    <type>TextArea</type>
</CustomField>