force-app/main/default/objects/Task_Grid_Setting__mdt/fields/Prevent_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Duplicates</label>
    <type>Checkbox</type>
</CustomField>