force-app/main/default/objects/Task_Grid_Setting__mdt/fields/Resource_Project_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Project_Field__c</fullName>
    <label>Resource Project Field</label>
    <type>TextArea</type>
</CustomField>